# smartplex

./: .env.example  .gitignore  .npmrc  .railwayignore  .vercelignore  AI_CAPABILITIES_SPEC.md  AI_INTEGRATION_COMPLETE.md  API_IS_WORKING.md  AUDIT_REPORT.md  BETA_CHECKLIST.md  BETA_LAUNCH_CHECKLIST.md  CASCADE_DELETION_IMPLEMENTATION.md  CURRENT_STATUS.md  DELETION_TESTING.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  EDGE_CASES_AND_CONSIDERATIONS.md  FEATURE_CHECKLIST.md  INTEGRATION_SETUP.md  LAUNCH_ROADMAP.md  MIGRATION_009_INSTRUCTIONS.md  NEXT_STEPS.md  PLEX_API_OPPORTUNITIES.md  PROGRESS_MODAL_INTEGRATION.md  QUICK_FIX.md  RAILWAY_CONTAINER_ISSUE.md  RAILWAY_SHUTDOWN_FIX.md  README.md  SESSION_SUMMARY.md  SETUP_INSTRUCTIONS.md  START_HERE.md  SUPABASE_AI_SETUP.md  TAUTULLI_SYNC_ARCHITECTURE.md  TECHNICAL_DEBT.md  TROUBLESHOOTING.md  WELCOME_BACK.md  check_railway.sh  nixpacks.toml  package.json  pnpm-lock.yaml  (+6 more)
apps/agent/: .env.example  Dockerfile  package.json  pyproject.toml
apps/agent/app/: config.py  main.py
apps/agent/app/api/routes/: cleanup.py  health.py  plex.py  system.py
apps/agent/app/core/: scheduler.py
apps/api/: .dockerignore  .env.example  Dockerfile  Dockerfile.bak  README.md  nixpacks.toml  package.json  pyproject.toml  railway.json  run.py  start.sh  test_diagnostics.py
apps/api/app/: config.py  main.py
apps/api/app/api/routes/: admin_deletion.py  admin_tautulli.py  ai.py  analytics.py  debug.py  feedback.py  health.py  integrations.py  plex.py  plex_auth.py  plex_sync.py  sync.py  system_config.py  watch_list.py  webhooks.py
apps/api/app/core/: ai.py  cache.py  exceptions.py  logging.py  plex_connection.py  scheduler.py  server_membership.py  supabase.py
apps/api/app/services/: ai_service.py  analytics_service.py  cascade_deletion_service.py  cascade_deletion_service.py.backup  deletion_service.py  plex_collections.py  tautulli_sync.py
apps/api/app/services/integrations/: __init__.py  base.py  overseerr.py  radarr.py  sonarr.py  tautulli.py
apps/api/scripts/: README.md  fix_invalid_plex_ids.py
(+45 files in other folders)
