[tool.poetry]
name = "smartplex-agent"
version = "0.1.0"
description = "SmartPlex Local Agent - Docker service for Plex server automation"
authors = ["Ryan Bradshaw <ryan@smartplex.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
httpx = "^0.25.2"
python-dotenv = "^1.0.0"
psutil = "^5.9.6"
aiofiles = "^23.2.0"
croniter = "^1.4.1"
apscheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"